tests/textual/error/lessThanEqualsByteString.uplc
(program 0.0.0 [ [(builtin lessThanEqualsByteString) (con integer 1234)] (con bytestring #00ffaa) ])
